04_Teste/exercicios_gerados/question_mdp_29_variavel/version_2/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 3
    2l = 2 * l
     ^
SyntaxError: invalid syntax